[gd_scene load_steps=4 format=3 uid="uid://bq0ktat2m1aao"]

[ext_resource type="Script" path="res://ProjectFallenKingdom/ui/upgrade_ui/item_option.gd" id="1_ckis2"]
[ext_resource type="Texture2D" uid="uid://do5evivgfvdkl" path="res://ProjectFallenKingdom/level_up/coins/coin.png" id="2_7dgiv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hlpjk"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
border_blend = true

[node name="ItemOption" type="Button"]
custom_minimum_size = Vector2(360, 100)
anchors_preset = -1
anchor_right = 0.257
anchor_bottom = 0.125
offset_right = 0.200012
script = ExtResource("1_ckis2")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 12.0
offset_top = 35.0
offset_right = 68.0
offset_bottom = 91.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hlpjk")

[node name="ItemIcon" type="TextureRect" parent="PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_7dgiv")
expand_mode = 1

[node name="ItemName" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 7.0
offset_right = 99.0
offset_bottom = 30.0
text = "Item Name"

[node name="ItemDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -15.0
offset_right = -8.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
text = "Item Description"
autowrap_mode = 2

[node name="ItemType" type="Label" parent="."]
layout_mode = 0
offset_left = 275.0
offset_top = 5.0
offset_right = 352.0
offset_bottom = 28.0
text = "Item Type"
clip_text = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 30.0
offset_right = 360.0
offset_bottom = 31.0

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
